# sqlite-reader-mcp

./: README.md  pylock.toml  pyproject.toml
sqlite_reader_mcp/: __main__.py
